Fix review notes

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -11,7 +11,7 @@
 
 \end{quotation}
 
-El sistema energético por detrás de la totalidad de la generación, transporte y distribución de la electricidad se mantiene entendiblemente completamente transparente ante los ojos de los usuarios finales de dicha energía~\cite{garrues2009red}.
+El sistema energético tras de la totalidad de la generación, transporte y distribución de la electricidad se mantiene entendiblemente completamente transparente ante los ojos de los usuarios finales de dicha energía~\cite{garrues2009red}.
 
 Por un lado, existe un entramado de redes de transporte eléctrico que combina múltiples tecnologías para asegurar su funcionamiento, teniendo que disponer de una elevada complejidad con el fin de integrar las diversas características del entorno cambiante de los activos energéticos.
 
@@ -22,28 +22,28 @@ En la actualidad, existen multitud de soluciones energéticas con las que aprovi
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/instalacion-bess.jpg}
-  \caption{Ilustración de la disposición una instalación híbrida de generación y almacenamiento\cite{deutz2023what}}
+  \caption{Ilustración de la disposición una instalación híbrida de generación y almacenamiento\cite{deutz2023what}.}
   \label{fig:instalacion-bess}
 \end{figure}
 
-Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología energética de almacenamiento que permiten, como su propio nombre indica, almacenar electricidad para su uso posterior. Esto facilita enormemente la gestión de la demanda y, crucialmente, mejora la estabilidad y eficiencia de la infraestructura eléctrica, pudiendo regularla activamente gracias a la rápida capacidad de conmutación de las baterías. De esta forma, son una de las tecnologías energéticas más idóneas para evitar posibles desajustes en la red~\cite{xu2014bess}.
+Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología energética de almacenamiento que permiten, como su propio nombre indica, almacenar electricidad para su uso posterior. Esto facilita enormemente la gestión de la demanda y, crucialmente, mejora la estabilidad y eficiencia de la infraestructura eléctrica, pudiendo regularla activamente gracias a la rápida capacidad de conmutación de las baterías. De esta forma, son una de las tecnologías energéticas más conveniente para evitar posibles desajustes en la red~\cite{xu2014bess}.
 
 Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más que nada, es justamente imprescindible controlar la carga y descarga de estos dispositivos cuidadosamente para prolongar su vida útil y asegurar el correcto funcionamiento de los mismos. Como las baterías cuentan con un \gls{capex} inicialmente considerable, pero un \gls{opex} mínimo~\cite{larsson2018cost}, lo que se busca es su rentabilidad mediante el beneficio generado a través del arbitraje de la energía almacenada en el mercado eléctrico.
 
-Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería incansablemente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
+Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, indefinidamente ciclando la batería incansablemente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
 
-De hecho, así es como nace Optibat, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de ofertado manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
+De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de ofertado manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
-Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, sapectos fundamentales de la operación que la entidad energética dueña de los activos energéticos tenía disponibles con anterioridad), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación.
+Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación que la entidad energética dueña de los activos energéticos tenía disponibles con anterioridad), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación.
 
 De esta forma, el sistema se divide en los apartados anteriormente mencionados. La infraestructura operacional, explicada en el capítulo~\ref{makereference3}, gestiona la capa de interacción de menor nivel disponible. El entorno de mercado, especificado en el capítulo~\ref{makereference4}, determina la información extraída de las instituciones regulatorias con las que se trabaja. La modelización estructural, puntualizada en el capítulo~\ref{makereference5}, habla de la lógica de negocio de las decisiones a tomar. El comando y control, precisado en el apartado~\ref{makereference6}, explica el flujo de vuelta a los activos físicos y la interacción de los agentes de mercado y operadores de telecontrol con el sistema. Finalmente, se describe la experimentación realizada en el capítulo~\ref{makereference7}.
 
 \section{Objetivos}
 \label{makereference1.1}
 
-El objetivo principal es el diseño, desarrollo, validación y despliegue (excluyendo la experimentación) de un sistema de arbitraje de baterías en el mercado eléctrico, garantizando su integración con la infraestructura establecida y su habilitación para operar en el mercado eléctrico. Cabe destacar que, dado que la tecnología de almacenamiento de energía en baterías apenas se encuentra aún en su infancia, no existe una solución fácilmente integrable o de sencilla implementación sobre la infraestructura energética existente, aunque existan esfuerzos externos para mejorar la situación. Por ello, lo que primeramente se busca es establecer dicha base.
+El objetivo principal es el diseño, desarrollo, validación y despliegue (excluyendo la experimentación) de un sistema de arbitraje de baterías en el mercado eléctrico, garantizando su integración con la infraestructura establecida y su habilitación para operar en el mercado eléctrico. Cabe destacar que, dado que la tecnología de almacenamiento de energía en baterías apenas se encuentra aún en sus primeras etapas de desarrollo, no existe una solución fácilmente integrable o de sencilla implementación sobre la infraestructura energética existente, aunque existan esfuerzos externos para mejorar la situación. Por ello, lo que primeramente se busca es establecer dicha base.
 
-A su vez, se definen varios objetivos secundarios complementarios al objetivo principal anterior.
+A su vez, se definen varios objetivos secundarios complementarios al objetivo principal anterior, detallados a continuación.
 
 \begin{description}
 
@@ -51,11 +51,11 @@ A su vez, se definen varios objetivos secundarios complementarios al objetivo pr
 
   \item[Minimizar el desgaste de las baterías] Se busca gestionar la operación del activo, principalmente la profundidad de descarga y el número de ciclos, de manera que se prolongue su vida útil y se minimice el desgaste físico del \gls{soc}. Se pretende encontrar el equilibrio entre la rentabilidad a corto plazo y la sostenibilidad de la inversión a largo plazo (ganar mucho dinero cuanto antes pero gastar la batería contra no ofertar tan agresivamente y estabilizar el ciclado pudiendo aprovechar mejores oportunidades futuras). La métrica usada para medir el desgaste se trata del número de ciclos de carga completos que, a diferencia del \gls{soh}, permite estimar la evolución del desgaste más fácilmente.
 
-  \item[Cumplir con los requisitos regulatorios] Es altamente aconsejable que todas las operaciones de carga y descarga propuestas por el sistema se adhieran estrictamente a los requisitos técnicos y normativos impuestos por tanto el \gls{mo} como el \gls{tso}~\cite{crespo2004resolucion}. Esto incluye el respeto de los límites de potencia estructurales marcados por ley, los límites técnicos causados por indisponibilidades, etc. El cumplimiento se mide a través de la magnitud de la desviación final por periodo de mercado en megavatios hora, es decir, la cantidad de energía que el sistema a pactado pero no ha sido capaz de cubrir.
+  \item[Cumplir con los requisitos regulatorios] Es altamente aconsejable que todas las operaciones de carga y descarga propuestas por el sistema se adhieran estrictamente a los requisitos técnicos y normativos impuestos por tanto el \gls{mo} como el \gls{tso}~\cite{crespo2004resolucion}. Esto incluye el respeto de los límites de potencia estructurales marcados por ley, los límites técnicos causados por indisponibilidades, etc. El cumplimiento se mide a través de la magnitud de la desviación final por periodo de mercado en megavatios hora, es decir, la cantidad de energía que el sistema ha pactado pero no ha sido capaz de cubrir.
 
   \item[Garantizar la seguridad de la operación] Se deben implementar múltiples niveles de validación para prevenir cualquier operación que pueda comprometer la integridad física del \gls{bess} o de la información misma. Aunque el control de bajo nivel es responsabilidad del \gls{bms} nativo de la batería, el sistema de optimización tiene la obligación de operar siempre dentro de un rango seguro predefinido. Además, la información tiene que fluir adecuándose correctamente a la \gls{pera}~\cite{williams1994purdue} de ciberseguridad en el entrono industrial. La seguridad de la operación se mide de forma empírica teniendo en cuenta el número de alarmas causadas por los sistemas de almacenamiento y alertas de ciberseguridad.
 
-  \item[Generalizar el diseño] El diseño de una arquitectura modular y configurable resulta clave para permitir la adaptación del sistema a diferentes instalaciones con capacidades de almacenamiento y configuraciones variadas. El objetivo es crear una solución escalable, no específica s una única instalación, facilitando su despliegue en futuras instalaciones con un esfuerzo de integración mínimo. La modularidad se analiza mediante el número íntegro de instalaciones soportadas por el sistema en el momento de su despliegue.
+  \item[Generalizar el diseño] El diseño de una arquitectura modular y configurable resulta clave para permitir la adaptación del sistema a diferentes instalaciones con capacidades de almacenamiento y configuraciones variadas. El objetivo es crear una solución escalable, no específica a una única instalación, facilitando su despliegue en futuras instalaciones con un esfuerzo de integración mínimo. La modularidad se analiza mediante el número íntegro de instalaciones soportadas por el sistema en el momento de su despliegue.
 
   \item[Facilitar la monitorización del sistema] Una interfaz de comando y control, que permita a los operadores de telecontrol y agentes de mercado supervisar el estado del sistema en tiempo real, ayuda a aumentar la confianza en el mismo. Esta interfaz debe proporcionar una visualización clara de las operaciones planificadas y ejecutadas y los resultados económicos obtenidos, garantizando la transparencia y la trazabilidad de las decisiones del sistema. Crucialmente, los agentes de mercado deben ser capaces de sobrescribir el comportamiento automático del sistema con indicaciones manuales ante situaciones de mercado no tenidas en cuenta, o periodos de prueba en el caso de los operadores de telecontrol.
 
@@ -75,8 +75,6 @@ En cambio, el alcance no incluye el control físico del nivel eléctrico de las 
 Tampoco se realiza el despliegue en sí del \gls{pis} central, ya que otras tecnologías energéticas hacen uso del mismo más allá de las baterías. Esto no quita que, aunque el sistema de control de planta ya exista de antes, el sistema desarrollado realize la integración de los activos energéticos físicos mismos con el \gls{pis} mismo mediante su extensión, a única excepción de su despliegue.
 
 Finalmente, el proyecto debe considerar procesos externos del entorno en el que es desplegado, por lo que no hay otra opción que depender de la capa de indirección del almacenamiento de la información del entorno de mercado (el \gls{dw}), del desglose de las posiciones negociadas previamente consultadas en servicios internos, y de la última etapa de la realización de las ofertas de mercado, la cual debe, por consideraciones legales, realizarse por la parte confiable de la entidad energética dueña de los activos energéticos.
-
-Con esto, la implementación de los apartados no confidenciales se encuentra a disposición bajo solicitud.
 
 % TODO
 \section{Plan de trabajo}
@@ -98,7 +96,7 @@ El plan de trabajo consta de la distribución en tareas del desarrollo del proye
       \ganttlink{experimentación}{redacción}
     \end{ganttchart}
   }
-  \caption{Diagrama Gantt del plan de trabajo}
+  \caption{Diagrama Gantt del plan de trabajo.}
   \label{fig:plan-trabajo}
 \end{figure}
 
