--- a/chapter4.tex
+++ b/chapter4.tex
@@ -8,7 +8,7 @@ Para que el sistema de optimización de baterías funcione de manera efectiva, n
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/esquema-mercado.jpg}
-  \caption{Esquema del funcionamiento del entorno del mercado}
+  \caption{Esquema del funcionamiento del entorno del mercado.}
   \label{fig:esquema-mercado}
 \end{figure}
 
@@ -28,7 +28,7 @@ El Operador del Mercado Ibérico de Energía, conocido como OMIE, es la instituc
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/omie.jpg}
-  \caption{Operador del Mercado Ibérico de Energía}
+  \caption{Operador del Mercado Ibérico de Energía.}
   \label{fig:omie}
 \end{figure}
 
@@ -46,7 +46,7 @@ Una de las piezas de información más críticas para el sistema de optimizació
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/precio-casación.png}
-  \caption{Precio marginal de casación en el mercado}
+  \caption{Precio marginal de casación en el mercado.}
   \label{fig:precio-casación}
 \end{figure}
 
@@ -91,7 +91,7 @@ Mientras que OMIE gestiona el componente económico del mercado, la responsabili
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/ree.jpg}
-  \caption{Red Eléctrica Española}
+  \caption{Red Eléctrica Española.}
   \label{fig:ree}
 \end{figure}
 
@@ -132,7 +132,7 @@ Este proceso de previsión es una tarea externa al sistema desarrollado. Se basa
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/prevision-renovable.png}
-  \caption{Ejemplo de una previsión de generación de un activo renovable}
+  \caption{Ejemplo de una previsión de generación de un activo renovable.}
   \label{fig:prevision-renovable}
 \end{figure}
 
@@ -164,7 +164,7 @@ Desde la perspectiva del sistema desarrollado, la fuente de datos meteorológico
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/arquitectura-mercado.png}
-  \caption{Arquitectura desacoplada del proceso de extracción, transformación y carga}
+  \caption{Arquitectura desacoplada del proceso de extracción, transformación y carga.}
   \label{fig:arquitectura-mercado}
 \end{figure}
 
@@ -200,14 +200,14 @@ El formato de los datos de precios contiene las columnas fecha, hora y precio en
     MarginalES & Precio marginal zona Española & F8.2 -- 0.0 a 99999.99\\
     \hline
   \end{tabular}
-  \caption{Descripción del formato de precios}
+  \caption{Descripción del formato de precios.}
   \label{tab:descripción-precio}
 \end{table}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/contenido-precio.png}
-  \caption{Ejemplificación del contenido de los ficheros de precio}
+  \caption{Ejemplificación del contenido de los ficheros de precio.}
   \label{fig:contenido-precio}
 \end{figure}
 
@@ -232,14 +232,14 @@ El fichero de energía negociada contiene las columnas UP, fecha, hora y energí
     NumOf & Indicará el número de oferta ó el de ejecución del contrato bilateral físico asociado a la unidad & I8 – -1 a 99999999\\
     \hline
   \end{tabular}
-  \caption{Descripción del formato de energía negociada}
+  \caption{Descripción del formato de energía negociada.}
   \label{tab:descripción-energia}
 \end{table}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/contenido-energia.png}
-  \caption{Ejemplificación del contenido de los ficheros de energía}
+  \caption{Ejemplificación del contenido de los ficheros de energía.}
   \label{fig:contenido-energia}
 \end{figure}
 
@@ -264,14 +264,14 @@ Para resolver este problema, se hace uso de una herramienta propietaria externa 
     NumOf & Indicará el número de oferta ó el de ejecución del contrato bilateral físico asociado a la unidad & I8 – -1 a 99999999\\
     \hline
   \end{tabular}
-  \caption{Descripción del formato de las limitaciones técnicas}
+  \caption{Descripción del formato de las limitaciones técnicas.}
   \label{tab:descripción-limitaciones}
 \end{table}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/contenido-limitaciones.png}
-  \caption{Limitaciones de programa a una instalación}
+  \caption{Limitaciones de programa a una instalación.}
   \label{fig:contenido-limitaciones}
 \end{figure}
 
