--- a/chapter6.tex
+++ b/chapter6.tex
@@ -29,7 +29,7 @@ Dependiendo de la posición de arbitraje, la batería puede encontrarse a difere
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/perfil-potencia.png}
-  \caption{Modulación del perfil de potencia de una batería}
+  \caption{Modulación del perfil de potencia de una batería.}
   \label{fig:perfil-potencia}
 \end{figure}
 
@@ -59,7 +59,7 @@ Aún habiendo convertido las unidades, se continua teniendo un problema, explica
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/carga-descarga.png}
-  \caption{Diagrama de un sistema de control de baterías con señales de carga y descarga independientes~\cite{sunkko2025two}}
+  \caption{Diagrama de un sistema de control de baterías con señales de carga y descarga independientes~\cite{sunkko2025two}.}
   \label{fig:carga-descarga}
 \end{figure}
 
@@ -87,7 +87,7 @@ Por ejemplo, una situación en la que una carga y descarga simultanea podría su
     H22Q4   & 5.5                          & 32.5                            & 32.5                             & 73.00                                      \\
     \hline
   \end{tabular}
-  \caption{Restricciones técnicas en donde, desde el periodo H21Q1 al H22Q1, la exportación de la generación está limitada mientras que la batería es capaz de exportar libremente, pudiendo causar conflictos entre la carga de aprovechamiento de la generación y la descarga de la venta en precios altos}
+  \caption{Restricciones técnicas en donde, desde el periodo H21Q1 al H22Q1, la exportación de la generación está limitada mientras que la batería es capaz de exportar libremente, pudiendo causar conflictos entre la carga de aprovechamiento de la generación y la descarga de la venta en precios altos.}
   \label{tab:carga-descarga-simultanea}
 \end{table}
 
@@ -99,7 +99,7 @@ Con las posiciones transformadas en potencia, solo se toman en cuenta los cambio
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/diferencia-perfil-potencia.png}
-  \caption{Diferencias correspondientes al perfil de potencia final}
+  \caption{Diferencias correspondientes al perfil de potencia final.}
   \label{fig:diferencia-perfil-potencia}
 \end{figure}
 
@@ -334,7 +334,7 @@ Finalmente, la oferta se comunica con la herramienta externa de resolución de o
     147  & Programa de consumo & M\_PC\_AA & Baja     \\
     \hline
   \end{tabular}
-  \caption{Formato de oferta de mercado}
+  \caption{Formato de oferta de mercado.}
   \label{tab:formato-oferta}
 \end{table}
 
@@ -350,7 +350,7 @@ Principalmente motivado por dicho propósito y con el objetivo de facilitar las 
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/cuadro-de-mando.png}
-  \caption{Cuadro de mando del sistema}
+  \caption{Cuadro de mando del sistema.}
   \label{fig:cuadro-de-mando}
 \end{figure}
 
@@ -372,7 +372,7 @@ En ella, es posible modificar la configuración operativa de cada una de las ins
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/configuración-sistema.png}
-  \caption{Configuración del sistema a través del cuadro de mandos}
+  \caption{Configuración del sistema a través del cuadro de mandos.}
   \label{fig:configuración-sistema}
 \end{figure}
 
@@ -387,7 +387,7 @@ También se permite especificar un programa manual, en donde se asegura el segui
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/soc-manual.png}
-  \caption{Regulación manual del estado de carga}
+  \caption{Regulación manual del estado de carga.}
   \label{fig:soc-manual}
 \end{figure}
 
@@ -398,34 +398,34 @@ Finalmente, se presentan los KPI en forma de los ingresos obtenidos por energía
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/kpi-sistema.png}
-  \caption{Métricas del sistema}
+  \caption{Métricas del sistema.}
   \label{fig:kpi-sistema}
 \end{figure}
 
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/perfil-generación.png}
-  \caption{Perfil de generación}
+  \caption{Perfil de generación.}
   \label{fig:perfil-generación}
 \end{figure}
 
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/programa-óptimo.png}
-  \caption{Programa óptimo de la batería}
+  \caption{Programa óptimo de la batería.}
   \label{fig:programa-óptimo}
 \end{figure}
 
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/soc-bess.png}
-  \caption{Estado de carga de la batería}
+  \caption{Estado de carga de la batería.}
   \label{fig:soc-bess}
 \end{figure}
 
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/limitaciones-técnicas.png}
-  \caption{Limitaciones técnicas de la instalación}
+  \caption{Limitaciones técnicas de la instalación.}
   \label{fig:limitaciones-técnicas}
 \end{figure}
