--- a/chapter8.tex
+++ b/chapter8.tex
@@ -12,7 +12,7 @@ En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactor
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/arquitecuta-sistema.png}
-  \caption{Arquitectura del sistema}
+  \caption{Arquitectura del sistema.}
   \label{fig:arquitectura-sistema}
 \end{figure}
 
@@ -33,7 +33,7 @@ Cabe destacar que tanto los \glspl{bess} como, por lo tanto, los sistemas de opt
 \section{Trabajo futuro}
 \label{makereference8.2}
 
-En cuanto al trabajo futuro, Optibat se encuentra limitado al arbitraje en los mercados spot: diario, intradiarios y continuo. Aún así, existen otros mercados más o menos rentables~\cite{cnmc2024balance}, como los mercados de \gls{mfrr} y \gls{afrr} que negocian disponibilidades. Resulta interesante añadir soporte a estos mercados para completar así el perfil de arbitraje de estas tecnologías de almacenamiento, ya que, coincidentemente, las baterías también son idóneas para la operación en dichos mercados debido a sus altas capacidades de conmutación.
+En cuanto al trabajo futuro, \textsc{Optibat} se encuentra limitado al arbitraje en los mercados spot: diario, intradiarios y continuo. Aún así, existen otros mercados más o menos rentables~\cite{cnmc2024balance}, como los mercados de \gls{mfrr} y \gls{afrr} que negocian disponibilidades. Resulta interesante añadir soporte a estos mercados para completar así el perfil de arbitraje de estas tecnologías de almacenamiento, ya que, coincidentemente, las baterías también son idóneas para la operación en dichos mercados debido a sus altas capacidades de conmutación.
 
 Si bien la integración con los mercados de regulación es definitivamente la mejora más notable a realizar, también aporta beneficio refinar la modelización del desgaste de las baterías~\cite{shamarova2022review}. Mediante la incorporación de señales aún más granulares y las especificaciones del \gls{bms}, es posible modelizar incluso el imperceptible desgaste mismo del \gls{soc} de las baterías en reposo. Ciertamente, aunque no sea un aspecto sumamente prioritario, debido al constante ciclado de las baterías que, por naturaleza, no busca precisamente el mantenimiento en estado estacionario, el aporte sustancial toma forma del aumento de fidelidad de los procesos físicos modelados. Además, un análisis en profundidad del desgaste sufrido por la batería, más allá del consumo de los ciclos para los que está calificada por el manufacturador, brinda claridad a posibles optimizaciones del beneficio obtenido bajo condiciones más adversas que las experimentadas.
 
