--- a/title.tex
+++ b/title.tex
@@ -6,7 +6,7 @@
 
   \vspace{1cm}
 
-  {\large OPTIMIZACIÓN DE BATERÍAS EN EL MERCADO ELÉCTRICO}\\
+  {\large OPTIBAT\@: OPTIMIZACIÓN DE BATERÍAS EN EL MERCADO ELÉCTRICO}\\
 
   \vspace{0.5cm}
 
