--- a/chapter5.tex
+++ b/chapter5.tex
@@ -39,7 +39,7 @@ Es necesario tener en cuenta los usos horarios a la hora de calcular el tamaño 
     \hline
     \hline
   \end{tabular}
-  \caption{Ajustes del mercado en cambios de hora}
+  \caption{Ajustes del mercado en cambios de hora.}
   \label{tab:cambio-hora}
 \end{table}
 
@@ -48,7 +48,7 @@ La representación del mercado durante la optimización realmente incluye multip
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/horizonte-de-optimizacióno.jpg}
-  \caption{Representación del horizonte de optimización}
+  \caption{Representación del horizonte de optimización.}
   \label{fig:horizonte-de-optimizacióno}
 \end{figure}
 
@@ -205,7 +205,7 @@ Representado en la figura~\ref{fig:clipping}, se puede entender como una persona
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/clipping.jpg}
-  \caption{Clipping de la configuración topológica híbrida con carga aislada de la red}
+  \caption{Clipping de la configuración topológica híbrida con carga aislada de la red.}
   \label{fig:clipping}
 \end{figure}
 
@@ -256,7 +256,7 @@ Los problemas de optimización degenerados son los que poseen múltiples solucio
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/degenerada-vs-estricta.jpg}
-  \caption{Comparación entre una posición degenerada y su contraparte estricta}
+  \caption{Comparación entre una posición degenerada y su contraparte estricta.}
   \label{fig:degenerada-vs-estricta}
 \end{figure}
 
@@ -280,7 +280,7 @@ La metodología anterior de juntar los dos objetivos se conoce como optimizació
 De esta forma, se desarrolla el algoritmo~\ref{alg:optimización-lexicográfica} de optimización lexicográfica multiobjetivo por encima del lenguaje de modelado abstracto para asegurar la priorización de los objetivos de la modelización, ya que la herramienta de modelado utilizada no soporta solucionar múltiples objetivos al mismo tiempo.
 
 \begin{algorithm}
-  \caption{Optimización lexicográfica}
+  \caption{Optimización lexicográfica.}
   \label{alg:optimización-lexicográfica}
   \begin{algorithmic}
     \State $i \gets 10$
