--- a/principal.tex
+++ b/principal.tex
@@ -1,4 +1,4 @@
-\documentclass[final,12pt,oneside]{class_diss}
+\documentclass[final, 12pt, oneside]{class_diss}
 
 \usepackage{eurosym}
 \usepackage{algpseudocode}
@@ -6,7 +6,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{amsxtra}
-\usepackage[spanish]{babel}
+\usepackage[spanish, es-tabla]{babel}
 \usepackage[usenames]{color}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
@@ -52,7 +52,7 @@
 
 \section*{Todo}
 \begin{enumerate}
-  \item Redactar capítulo estado de la cuestión (2 días)
+  \item Redactar capítulo estado de la cuestión (1 día)
   \item Elaborar diagrama Gantt de la sección plan de trabajo (1 día)
   \item Completar ecuaciones (1 días)
   \item Completar figuras (2 días)
