Finish revising setpoint and control

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -30,7 +30,15 @@
 
 \newacronym[longplural=tecnologías de la información]{it}{IT}{tecnología de la información}
 
+\newacronym[longplural=indicadores de desempeño]{kpi}{KPI}{indicador de desempeño}
+
 \newacronym[longplural=servicios de regulación secundaria]{mfrr}{mFRR}{servicio de regulación secundaria}
+
+\newacronym[longplural=mercados diarios]{md}{MD}{mercado diario}
+
+\newacronym[longplural=mercados intradiarios]{mi}{MI}{mercado intradiario}
+
+\newacronym[longplural=mercados intradiarios continuos]{mic}{MIC}{mercado intradiario continuo}
 
 \newacronym[longplural=operadores del mercado]{mo}{MO}{operador del mercado}
 
