--- a/principal.tex
+++ b/principal.tex
@@ -54,7 +54,7 @@
 \begin{enumerate}
   \item Redactar capítulo estado de la cuestión (1 día)
   \item Elaborar diagrama Gantt de la sección plan de trabajo (1 día)
-  \item Completar ecuaciones (1 días)
+  \item ¿Anexo de ecuaciones? (1 día)
   \item Completar figuras (2 días)
 \end{enumerate}
 
