--- a/acronyms.tex
+++ b/acronyms.tex
@@ -26,7 +26,7 @@
 
 \newacronym[longplural=direcciones de objeto de información]{ioa}{IOA}{dirección de objeto de información}
 
-\newacronym[longplural=internets de las cosass]{iot}{IoT}{internet de las cosas}
+\newacronym[longplural=internets de las cosas]{iot}{IoT}{internet de las cosas}
 
 \newacronym[longplural=tecnologías de la información]{it}{IT}{tecnología de la información}
 
